# rust-server-react-client

./: .gitignore  Cargo.toml  README.md
client/: package-lock.json
client/src/: App.js  config.js
src/: attendance_handler.rs  errors.rs  invitation_handler.rs  main.rs  models.rs  register_handler.rs  utils.rs
